<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tx_warning"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/warning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tx_warning"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/sw_on"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:checked="false"
            android:text="@string/tracking_on" />

        <LinearLayout
            android:id="@+id/details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/details_days"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tx_day"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/tracking_days"
                    android:textColor="@android:color/black" />

                <SeekBar
                    android:id="@+id/sb_day"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:indeterminate="false"
                    android:max="4"
                    android:progress="0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/details_freq"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tx_freq"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/frequency"
                    android:textColor="@android:color/black" />

                <SeekBar
                    android:id="@+id/sb_freq"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:indeterminate="false"
                    android:max="2"
                    android:progress="0" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_trackings" />

            <Button
                android:id="@+id/bt_del"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>